# pedestrian_track

./: awaittest.py  boe_demo_merge.py_20201223  boe_merge_demo.py  boe_merge_demo.py.20201223  boe_merge_demo.py.bk  boe_merge_demo.py.gggggggggg  boe_merge_demo.py.xxxxxx  boe_merge_demo.py_202012161045  boe_merge_demo.py_202012181129  boe_merge_demo.py_202012181804  boe_merge_demo.py_202012191439  boe_merge_demo.py_202012211007  boe_merge_demo.py_202012211812  boe_merge_demo.py_202012211844  calculate_found_gone.py  convertimg.py  ffmpeg_encode_ndarray.py  flask_server.py  killboe.sh  main.py  npz_to_db.py  pedes_statis.sql  pushrtmp.sh  readframe.py  readpipe.py  readwritepipe.py  startboe.sh  two_videos_tensorrt_final_every_nlp_1camera.py  writepipe.py  ws_server.py
CamEncoder/: CMakeLists.txt  CamEncode.cpp  CamEncode.h  Makefile  Readme.txt  main.cpp
CamEncoder/src/: CamEncode.cpp  CamEncode.h  main.cpp
api/: CameraApi.py  convertimg.py  cppencoder.py  data_interface.txt  h264_header_len_158.h264  h264_header_len_158.h264_10fps  nms.py  object_detection_pint_api.py  output_header_25fps_len_383.h264  output_short_header_25fps.h264.bk  output_short_header_25fps_gop12.h264  plot_utils.py  reid_pint_api.py  yolo_detection.py  yolo_reid_pint_api.py
config/: extract_feature_config.json  nginx.conf  object_detection_config.json  tune_boe.json  yolo_reid_config.json  yolo_v3_416_i8.json
nginx/: nginx.conf
